# ZeroBot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .replit  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  keep_alive.py  main.py  pyproject.toml  replit.md
.github/workflows/: ci.yml
arcana/: __init__.py  config.py  main.py
arcana/agents/: __init__.py  builder_agent.py  cli_test.py  llm.py  sandbox.py  tools.py
arcana/analytics/: __init__.py  tracker.py
arcana/api/: __init__.py  admin_console.py  bot_platform.py  user_console.py
arcana/botfather/: __init__.py  client.py  service.py
arcana/bots/: __init__.py
arcana/bots/builder_bot/: __init__.py  locales.py  main.py
arcana/bots/manager_bot/: __init__.py  main.py
arcana/core/: __init__.py  delivery.py  gateway.py  limiter.py  orchestrator.py  runtime_manager.py  wake_buffer.py
arcana/database/: __init__.py  engine.py  models.py  port_registry.py  wallet.py
arcana/events/: __init__.py  publisher.py
arcana/hibernation/: __init__.py  hibernator.py
arcana/identity/: __init__.py  phone.py  quota.py  sessions.py
arcana/isolation/: __init__.py  venv_manager.py
arcana/security/: __init__.py  crypto.py  keys.py
arcana/services/: bot_admins.py  bot_analytics.py  bot_broadcast.py  bot_config.py  bot_invites.py  platform_settings.py  scheduler.py  smart_defaults.py  subscribers.py
arcana/templates/base_template/: arcana_helpers.py  main.py  manifest.json
arcana/tests/: __init__.py  mock_event_listener.py
attached_assets/: Pasted--Phase-1-Database-Wallet-Crystals--1777093538189_1777093538196.txt  Pasted--Phase-3-Telegram--1777094686547_1777094686557.txt  Pasted-You-are-working-on-an-existing-Telegram-Bot-Builder-pro_1777306104110.txt  branding-1777097996172.json  logoHref.html
tests/: conftest.py  test_admin_console_pagination.py  test_admin_console_settings.py  test_admin_console_stats.py  test_base_template.py  test_bot_admins.py  test_bot_analytics.py  test_bot_broadcast.py  test_bot_config.py  test_bot_invites.py  test_bot_platform_api.py  test_botfather.py  test_builder_session_store.py  test_crypto.py  test_events.py  test_hibernator.py  test_keep_alive.py  test_limiter.py  test_locales.py  test_phone_identity.py  test_platform_settings.py  test_sandbox.py  test_scheduler.py  test_smart_defaults.py  test_subscribers.py  test_wake_buffer.py
zerobot/: config.py  main.py
zerobot/agents/: __init__.py  builder_agent.py  cli_test.py  llm.py  sandbox.py  tools.py
zerobot/analytics/: tracker.py
zerobot/api/: admin_console.py  user_console.py
zerobot/bots/manager_bot/: main.py
zerobot/core/: delivery.py  gateway.py  limiter.py  orchestrator.py  wake_buffer.py
zerobot/database/: engine.py  models.py  port_registry.py  wallet.py
zerobot/events/: publisher.py
zerobot/hibernation/: hibernator.py
zerobot/runtime_envs/builder_sessions/smoke-test/workspace/: hello.py
zerobot/templates/base_template/: main.py  manifest.json
zerobot/tests/: mock_event_listener.py
