[project]
name = "arcana"
version = "0.1.0"
description = "Arcana — a multi-tenant platform for hosting hibernating Telegram bots, with a wallet-based billing layer and an autonomous coding agent (Builder Agent) over Telegram."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "iLildev" },
]
requires-python = ">=3.11"
keywords = ["telegram", "bot", "platform", "agent", "anthropic", "claude", "fastapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "aiogram>=3.0.0",
    "aiohttp>=3.9.0",
    "anthropic>=0.40.0",
    "asyncpg>=0.31.0",
    "cryptography>=42.0",
    "fastapi>=0.136.1",
    "flask>=3.0.0",
    "greenlet>=3.4.0",
    "httpx>=0.28.1",
    "pydantic>=2.0",
    "pydantic-settings>=2.14.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pre-commit>=3.7",
    "aiosqlite>=0.20",
]

[project.urls]
Homepage = "https://github.com/iLildev/arcana"
Source = "https://github.com/iLildev/arcana"
Issues = "https://github.com/iLildev/arcana/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["arcana"]

# ──────────────── Tooling ────────────────

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    "arcana/runtime_envs",
    ".venv",
    ".cache",
    ".local",
]

[tool.ruff.lint]
# A pragmatic PEP 8 baseline. We start strict on style/imports but keep
# rule-set small enough that a small project stays readable.
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line length (handled by formatter)
    "B008",  # function calls in default args (FastAPI Depends pattern)
    "SIM117", # nested with-statements (intentional for SQLAlchemy sessions)
]

[tool.ruff.lint.per-file-ignores]
"arcana/templates/**/*.py" = ["F401"]  # template files may have unused imports for users to extend
"arcana/tests/**/*.py" = ["F401"]
"tests/**/*.py" = ["B011"]  # `assert False` is fine in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q --strict-markers"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pydantic.*",
]
